--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
 
   # fonts:
