--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.0.1
   bloc: ^8.0.2
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
